cmake_minimum_required(VERSION 3.21)
project(dataStructPractice)

set(CMAKE_CXX_STANDARD 14)

add_executable(dataStructPractice chapter1/main.cpp )
add_executable(dataStructPractice2 chapter2/main.cpp)
add_executable(dataStructPractice3 chapter3/main.cpp)
add_executable(dataStructPractice4 chapter4/main.cpp)
add_executable(dataStructPractice5 chapter5/main.cpp)
add_executable(dataStructPractice6 chapter6/main.cpp)
add_executable(dataStructPractice7 chapter7/main.cpp)
add_executable(dataStructPractice8 chapter8/main.cpp)
add_executable(dataStructPractice9 chapter9/main.cpp)
add_executable(dataStructPractice10 chapter10/main.cpp)
add_executable(dataStructPractice11 chapter11/main.cpp)
add_executable(dataStructPractice12 chapter12/main.cpp)
add_executable(dataStructPractice13 chapter13/main.cpp)
add_executable(dataStructPractice14 chapter14/main.cpp)
add_executable(dataStructPractice15 chapter15/main.cpp)
add_executable(dataStructPractice16 chapter16/main.cpp)
add_executable(dataStructPractice17 chapter17/main.cpp)
add_executable(dataStructPractice18 chapter18/main.cpp)
add_executable(dataStructPractice19 chapter19/main.cpp)
add_executable(dataStructPractice20 chapter20/main.cpp)
add_executable(dataStructPractice21 chapter21/main.cpp)
add_executable(dataStructPractice22 chapter22/main.cpp)
add_executable(dataStructPractice23 chapter23/main.cpp)
add_executable(dataStructPractice24 chapter24/main.cpp)
add_executable(dataStructPractice25 chapter25/main.cpp)